Fixed file errors